--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rsschool-cv-html</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
       href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&display=swap"
       rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    >
+    <link rel="stylesheet" href="./css/reset.css" >
+    <link rel="stylesheet" href="./css/style.css" >
   </head>
 
   <body>
@@ -193,9 +193,14 @@
               <h3>Code example</h3>
             </div>
             <p>
-              <strong><a href="http://www.codewars.com/kata/5324945e2ece5e1f32000370/train/javascript">Sum Strings as Numbers 4kyu</a>:</strong> Given the
-              string representations of two integers, return the string
-              representation of the sum of those integers.
+              <strong
+                ><a
+                  href="http://www.codewars.com/kata/5324945e2ece5e1f32000370/train/javascript"
+                  >Sum Strings as Numbers 4kyu</a
+                >:</strong
+              >
+              Given the string representations of two integers, return the
+              string representation of the sum of those integers.
             </p>
             <pre>
             <code>
