--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" >
+    <meta http-equiv="x-ua-compatible" content="ie=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Rsschool-cv-html</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
       href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/reset.css" >
+    <link rel="stylesheet" href="./css/style.css" >
   </head>
 
   <body>
@@ -25,7 +25,7 @@
               alt="Portrait"
               width="204"
               height="204"
-            />
+            >
             <h1>Anton Novikov</h1>
             <h2>Junior Frontend Developer</h2>
           </header>
@@ -48,7 +48,7 @@
                     alt="Email Icon"
                     width="30"
                     height="30"
-                  />
+                  >
                   <p>NewTonyMail1988@gmail.com</p>
                 </li>
                 <li>
@@ -65,7 +65,7 @@
                         src="https://img.shields.io/badge/Text Me-2CA5E0?style=for-the-badge&logo=telegram&logoColor=white"
                         alt="Написать мне в телеге"
                         srcset=""
-                      />
+                      >
                     </a>
                   </p>
                 </li>
@@ -115,7 +115,7 @@
                 alt="About Myself Icon"
                 width="30"
                 height="30"
-              />
+              >
               <h3>About Myself</h3>
             </div>
             <p>I am 34 years old, I work as a engineer.</p>
@@ -138,7 +138,7 @@
                 alt="Education Icon"
                 width="30"
                 height="30"
-              />
+              >
               <h3>Education</h3>
             </div>
             <p>
