--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&display=swap"
-      rel="stylesheet"
-     >
+      rel="stylesheet">
 
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -26,8 +25,7 @@
               src="./images/Portrait.jpg"
               alt="Portrait"
               width="204"
-              height="204"
-            >
+              height="204">
             <h1>Anton Novikov</h1>
             <h2>Junior Frontend Developer</h2>
           </header>
@@ -36,21 +34,17 @@
               <h3>Contacts</h3>
               <ul>
                 <li>
-                  <img
-                    src="./icons/phone.svg"
+                  <img src="./icons/phone.svg"
                     alt="Phone Icon"
                     width="30"
-                    height="30"
-                  >
+                    height="30">
                   <p>+7(951) 077 12 19</p>
                 </li>
                 <li>
-                  <img
-                    src="./icons/email.svg"
+                  <img src="./icons/email.svg"
                     alt="Email Icon"
                     width="30"
-                    height="30"
-                  >
+                    height="30">
 
                   <p>NewTonyMail1988@gmail.com</p>
                 </li>
@@ -59,15 +53,13 @@
                     src="./icons/telegram.svg"
                     alt="Telegram Icon"
                     width="30"
-                    height="30"
-                  >
+                    height="30">
                   <p>
                     @tonynew8
                     <a href="https://t.me/tonynew8"
                       ><img
                         src="https://img.shields.io/badge/Text Me-2CA5E0?style=for-the-badge&logo=telegram&logoColor=white"
-                        alt="Написать мне в телеге"
-                      >
+                        alt="Написать мне в телеге">
                     </a>
                   </p>
                 </li>
@@ -112,12 +104,10 @@
         <aside class="right-column">
           <section class="about-myself">
             <div class="sub-header">
-              <img
-                src="./icons/myself.svg"
+              <img src="./icons/myself.svg"
                 alt="About Myself Icon"
                 width="30"
-                height="30"
-              >
+                height="30">
               <h3>About Myself</h3>
             </div>
             <p>I am 34 years old, I work as a engineer.</p>
@@ -135,12 +125,10 @@
           </section>
           <section class="education">
             <div class="sub-header">
-              <img
-                src="./icons/education.svg"
+              <img src="./icons/education.svg"
                 alt="Education Icon"
                 width="30"
-                height="30"
-              >
+                height="30">
               <h3>Education</h3>
             </div>
             <p>
@@ -162,8 +150,7 @@
                 src="./icons/courses.svg"
                 alt="Courses"
                 width="30"
-                height="30"
-              >
+                height="30">
               <h3>Courses</h3>
             </div>
             <ul>
@@ -190,17 +177,11 @@
                 src="./icons/code.svg"
                 alt="Code Icon"
                 width="30"
-                height="30"
-              >
+                height="30">
               <h3>Code example</h3>
             </div>
             <p>
-              <strong
-                ><a
-                  href="http://www.codewars.com/kata/5324945e2ece5e1f32000370/train/javascript"
-                  >Sum Strings as Numbers 4kyu</a
-                >:</strong
-              >
+              <strong><a href="http://www.codewars.com/kata/5324945e2ece5e1f32000370/train/javascript">Sum Strings as Numbers 4kyu</a>:</strong>
               Given the string representations of two integers, return the
               string representation of the sum of those integers.
             </p>
@@ -215,23 +196,19 @@
       </div>
       <footer>
         <a class="my-github" href="https://github.com/AntonNovikov">
-          <img
-            class="github-icon"
+          <img class="github-icon"
             src="./icons/github.svg"
             alt="Github Icon"
             width="26"
-            height="26"
-          >
+            height="26">
           <p>Visit my GitHub</p>
         </a>
         <p>© 2023</p>
         <a href="https://rs.school/js/">
-          <img
-            src="./icons/rsschool.svg"
+          <img src="./icons/rsschool.svg"
             alt="Rsschool Icon"
             width="73"
-            height="26"
-          >
+            height="26">
         </a>
       </footer>
     </div>
