fix: i think last

--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
                 <li>Adobe Photoshop</li>
               </ul>
             </section>
-
             <section class="languages">
               <h3>Languages</h3>
               <ul>
@@ -92,7 +91,6 @@
                   <p class="language-name">Russian</p>
                   <p>Native</p>
                 </li>
-
                 <li>
                   <p class="language-name">German</p>
                   <p>Very Basic</p>
@@ -132,10 +130,7 @@
               <h3>Education</h3>
             </div>
             <p>
-              <strong>
-                KURSK STATE AGRICULTURAL ACADEMY NAMED AFTER I. I.
-                IVANOV</strong
-              >
+              <strong>KURSK STATE AGRICULTURAL ACADEMY NAMED AFTER I. I. IVANOV</strong>
             </p>
             <p>Engineering Faculty</p>
             <p>Years: 2005 - 2010</p>
@@ -156,7 +151,7 @@
             <ul>
               <li>
                 HTML and CSS Tutorials on
-                <a href="http://www.w3schools.com/"> w3schools </a>(in progress)
+                <a href="http://www.w3schools.com/">w3schools </a>(in progress)
               </li>
               <li>
                 JavaScript Manual on
