--- a/index.html
+++ b/index.html
@@ -11,5 +11,195 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
   </head>
-  <body> </body>
+  <body>
+    <div class="container-centered">
+      <div class="two-columns">
+        <div class="left-column">
+          <header>
+            <img 
+              src="./images/Portrait.jpg"
+              alt="Portrait"
+              width="204"
+              height="204">
+            <h1>Anton Novikov</h1>
+            <h2>Junior Frontend Developer</h2>
+          </header>
+          <main>
+            <section class="contacts">
+              <h3>Contacts</h3>
+              <ul>
+                <li>
+                  <img src="./icons/phone.svg"
+                    alt="Phone Icon"
+                    width="30"
+                    height="30">
+                  <p>+7(951) 077 12 19</p>
+                </li>
+                <li>
+                  <img src="./icons/email.svg"
+                    alt="Email Icon"
+                    width="30"
+                    height="30">
+                  <p>NewTonyMail1988@gmail.com</p>
+                </li>
+                <li>
+                  <img
+                    src="./icons/telegram.svg"
+                    alt="Telegram Icon"
+                    width="30"
+                    height="30">
+                  <p>
+                    @tonynew8
+                    <a href="https://t.me/tonynew8"
+                      ><img
+                        src="https://img.shields.io/badge/Text Me-2CA5E0?style=for-the-badge&logo=telegram&logoColor=white"
+                        alt="Написать мне в телеге">
+                    </a>
+                  </p>
+                </li>
+              </ul>
+            </section>
+            <section class="skills">
+              <h3>Skills</h3>
+              <ul>
+                <li>HTML5</li>
+                <li>CSS3 (Bootstrap, SASS/SCSS, BEM)</li>
+                <li>
+                  JavaScript (Fundamentals, ES6+, DOM, JSON, Asynchronous
+                  JavaScript)
+                </li>
+                <li>Git, GitHub, GitHub Desktop</li>
+                <li>VS Code</li>
+                <li>Figma (for web development)</li>
+                <li>Adobe Photoshop</li>
+              </ul>
+            </section>
+            <section class="languages">
+              <h3>Languages</h3>
+              <ul>
+                <li>
+                  <p class="language-name">English</p>
+                  <p>EPAM English test result: B1 (Intermediate)</p>
+                </li>
+                <li>
+                  <p class="language-name">Russian</p>
+                  <p>Native</p>
+                </li>
+                <li>
+                  <p class="language-name">German</p>
+                  <p>Very Basic</p>
+                </li>
+              </ul>
+            </section>
+          </main>
+        </div>
+        <aside class="right-column">
+          <section class="about-myself">
+            <div class="sub-header">
+              <img src="./icons/myself.svg"
+                alt="About Myself Icon"
+                width="30"
+                height="30">
+              <h3>About Myself</h3>
+            </div>
+            <p>I am 34 years old, I work as a engineer.</p>
+            <p>
+              I’m interested in Web Development because this occupation provides
+              endless possibilities for professional growth,besides there’s a
+              huge amount of free high quality resources for self-education and
+              a large community of developers.
+            </p>
+            <p>
+              I believe, that my ability to learn and to gain new skills will
+              lead me through this path of becoming a proficient Frontend
+              Developer.
+            </p>
+          </section>
+          <section class="education">
+            <div class="sub-header">
+              <img src="./icons/education.svg"
+                alt="Education Icon"
+                width="30"
+                height="30">
+              <h3>Education</h3>
+            </div>
+            <p>
+              <strong>KURSK STATE AGRICULTURAL ACADEMY NAMED AFTER I. I. IVANOV</strong>
+            </p>
+            <p>Engineering Faculty</p>
+            <p>Years: 2005 - 2010</p>
+            <p>
+              Specialization: Technology of maintenance and repair of machines
+              in the agro-industrial complex, Specialist degree
+            </p>
+          </section>
+          <section class="courses">
+            <div class="sub-header">
+              <img
+                src="./icons/courses.svg"
+                alt="Courses"
+                width="30"
+                height="30">
+              <h3>Courses</h3>
+            </div>
+            <ul>
+              <li>
+                HTML and CSS Tutorials on
+                <a href="http://www.w3schools.com/">w3schools </a>(in progress)
+              </li>
+              <li>
+                JavaScript Manual on
+                <a href="http://learn.javascript.ru/">learnjavascript.ru</a>(in
+                progress)
+              </li>
+              <li>
+                <a href="http://https://rs.school/"
+                  >RS Schools «JavaScript/Front-end. Stage 0»</a
+                >
+                (in progress)
+              </li>
+            </ul>
+          </section>
+          <section class="code-example">
+            <div class="sub-header">
+              <img
+                src="./icons/code.svg"
+                alt="Code Icon"
+                width="30"
+                height="30">
+              <h3>Code example</h3>
+            </div>
+            <p>
+              <strong><a href="http://www.codewars.com/kata/5324945e2ece5e1f32000370/train/javascript">Sum Strings as Numbers 4kyu</a>:</strong>
+              Given the string representations of two integers, return the
+              string representation of the sum of those integers.
+            </p>
+            <pre>
+            <code>
+        function sumStrings(a,b) {
+           return (BigInt(a) + BigInt(b)).toString();
+        }</code>
+          </pre>
+          </section>
+        </aside>
+      </div>
+      <footer>
+        <a class="my-github" href="https://github.com/AntonNovikov">
+          <img class="github-icon"
+            src="./icons/github.svg"
+            alt="Github Icon"
+            width="26"
+            height="26">
+          <p>Visit my GitHub</p>
+        </a>
+        <p>© 2023</p>
+        <a href="https://rs.school/js/">
+          <img src="./icons/rsschool.svg"
+            alt="Rsschool Icon"
+            width="73"
+            height="26">
+        </a>
+      </footer>
+    </div>
+  </body>
 </html>
